// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should fail explicitly when fetching a non-existing resource 1`] = `
Array [
  [GraphQLError: Request Failed. Status: 404 - Not Found. Body: Path not found for api/libraries/42069. Tried:
	mock/api/libraries/42069.json
	mock/api/libraries/42069/index.json],
]
`;

exports[`should fail explicitly when fetching a non-existing resource 2`] = `
Array [
  "/api/libraries/42069",
]
`;

exports[`should get all library names 1`] = `
Object {
  "libraries": Array [
    Object {
      "name": "My Library",
    },
    Object {
      "name": "Iron Man Suit",
    },
  ],
}
`;

exports[`should get all library names 2`] = `
Array [
  "/api/libraries",
]
`;

exports[`should only make the required requests on complex queries 1`] = `
Object {
  "library": Object {
    "folders": Array [
      Object {
        "documents": Array [
          Object {
            "name": "Armor.cad",
          },
          Object {
            "name": "Pitch.docx",
          },
        ],
        "folders": Array [
          Object {
            "name": "Hot Rod Red",
          },
        ],
        "name": "Suit",
      },
    ],
  },
}
`;

exports[`should only make the required requests on complex queries 2`] = `
Array [
  "/api/libraries/406",
  "/api/libraries/406/folders",
  "/api/folders/6890?embed=f,d",
]
`;

exports[`should resolve documents 1`] = `
Object {
  "document": Object {
    "name": "Armor.cad",
  },
}
`;

exports[`should resolve documents 2`] = `
Array [
  "/api/documents/19749",
]
`;
